--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 08/16/2021 08:57<br>
+Completed books sorted by folder - 08/17/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 50 books - 509H 31M / 21D 5H 31M<br>
 Total Comic Trades : 19<br>
 Average book length : 10H 11M<br>
-Hours read per week : 15H 38M<br>
-On pace to complete 80 books (816H 13M / 34D 0H 13M) by the end of 2021<br>
+Hours read per week : 15H 34M<br>
+On pace to complete 79 books (812H 34M / 33D 20H 34M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -483,12 +483,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 383 titles - 4287H 19M / 178D 15H 19M<br>
 Total remaining in queue and reserve: 805 titles - 10004H 59M / 416D 20H 59M<br>
-Average completed per year: 44.4 titles - 497H 16M / 20D 17H 16M<br>
+Average completed per year: 44.4 titles - 497H 7M / 20D 17H 7M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.162 (3.162 seconds)<br>
-Total time including file writes: 00:00:03.162 (3.162 seconds)
+Total time to process all reports: 00:00:05..97 (5.97 seconds)<br>
+Total time including file writes: 00:00:05..97 (5.97 seconds)
 </div>
 </body>
 </html>
