--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/16/2021 08:57<br>
+Reserved books sorted by length - 08/17/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 805 books<br>
@@ -757,12 +757,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 383 titles - 4287H 19M / 178D 15H 19M<br>
 Total remaining in queue and reserve: 805 titles - 10004H 59M / 416D 20H 59M<br>
-Average completed per year: 44.4 titles - 497H 16M / 20D 17H 16M<br>
+Average completed per year: 44.4 titles - 497H 7M / 20D 17H 7M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.162 (3.162 seconds)<br>
-Total time including file writes: 00:00:03.162 (3.162 seconds)
+Total time to process all reports: 00:00:05..97 (5.97 seconds)<br>
+Total time including file writes: 00:00:05..97 (5.97 seconds)
 </div>
 </body>
 </html>
