--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 08/20/2021 14:26<br>
+All books sorted by name - 08/21/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1189 books<br>
+1190 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -214,6 +214,7 @@ Crobuzon 2 - The Scar - China Mieville - 27H 6M (Queue - Current Audiobooks)<br>
 Crobuzon 3 - Iron Council - China Mieville - 21H 10M (Book Reserve - Audiobooks)<br>
 CryoBurn - Lois McMaster Bujold - 10H 36M (Book Reserve - Audiobooks)<br>
 Cryptonomicon - Neal Stephenson - 42H 56M (Book Reserve - Audiobooks)<br>
+Cultish - The Language of Fanaticism - Amanda Montell - 8H 24M (Queue - Current Audiobooks)<br>
 Culture 01 - Consider Phlebas - Iain M. Banks - 16H 31M (Completed in 2018)<br>
 Culture 02 - The Player of Games - Iain M. Banks - 11H 28M (Completed in 2018)<br>
 Culture 03 - Use of Weapons - Iain M. Banks - 13H 33M (Completed in 2021)<br>
@@ -1206,7 +1207,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 176 books - 2228H 17M / 92D 20H 17M<br>
+Queue - Current Audiobooks - 177 books - 2236H 41M / 93D 4H 41M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 52 books - 518H 13M / 21D 14H 13M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -1226,22 +1227,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-207 queued items: 2712H 5M / 113D 0H 5M<br>
+208 queued items: 2720H 29M / 113D 8H 29M<br>
 0 reserve titles are marked as high priority<br>
-25.75% of reserve items are queued<br>
+25.84% of reserve items are queued<br>
  <br>
-All books included in this report: 1189 titles - 14305H 41M / 596D 1H 41M<br>
+All books included in this report: 1190 titles - 14314H 5M / 596D 10H 5M<br>
 Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 385 titles - 4296H 1M / 179D 0H 1M<br>
-Total remaining in queue and reserve: 804 titles - 10009H 39M / 417D 1H 39M<br>
-Average completed per year: 44.6 titles - 497H 39M / 20D 17H 39M<br>
+Total remaining in queue and reserve: 805 titles - 10018H 4M / 417D 10H 4M<br>
+Average completed per year: 44.6 titles - 497H 30M / 20D 17H 30M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:10.0.1 (10.1 seconds)<br>
-Total time including file writes: 00:00:10.101 (10.101 seconds)
+Total time to process all reports: 00:00:02.024 (2.024 seconds)<br>
+Total time including file writes: 00:00:02.024 (2.024 seconds)
 </div>
 </body>
 </html>
