--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/20/2021 14:26<br>
+Reserved books sorted by length - 08/21/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-804 books<br>
+805 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -208,6 +208,7 @@ The Pleasure of Finding Things Out - Richard P. Feynman - 8H 23M (Queue - Audibl
 Skin in the Game - Nassim Nicholas Taleb - 8H 23M (Queue - Current Audiobooks)<br>
 Gateway - Frederik Pohl - 8H 23M (Book Reserve - Audiobooks (Need new source))<br>
 Frankenstein, or The Modern Prometheus - Mary Shelley - 8H 23M (Book Reserve - Audiobooks)<br>
+Cultish - The Language of Fanaticism - Amanda Montell - 8H 24M (Queue - Current Audiobooks)<br>
 Artemis Fowl 5 - The Lost Colony - 8H 25M (Book Reserve - Audiobooks)<br>
 Pern 3-02 - Dragon's Kin - 8H 26M (Book Reserve - Audiobooks)<br>
 How Democracies Die - Steven Levitsky - 8H 27M (Queue - Current Audiobooks)<br>
@@ -728,7 +729,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 176 books - 2228H 17M / 92D 20H 17M<br>
+Queue - Current Audiobooks - 177 books - 2236H 41M / 93D 4H 41M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 52 books - 518H 13M / 21D 14H 13M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -748,22 +749,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-207 queued items: 2712H 5M / 113D 0H 5M<br>
+208 queued items: 2720H 29M / 113D 8H 29M<br>
 0 reserve titles are marked as high priority<br>
-25.75% of reserve items are queued<br>
+25.84% of reserve items are queued<br>
  <br>
-All books included in this report: 1189 titles - 14305H 41M / 596D 1H 41M<br>
+All books included in this report: 1190 titles - 14314H 5M / 596D 10H 5M<br>
 Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 385 titles - 4296H 1M / 179D 0H 1M<br>
-Total remaining in queue and reserve: 804 titles - 10009H 39M / 417D 1H 39M<br>
-Average completed per year: 44.6 titles - 497H 39M / 20D 17H 39M<br>
+Total remaining in queue and reserve: 805 titles - 10018H 4M / 417D 10H 4M<br>
+Average completed per year: 44.6 titles - 497H 30M / 20D 17H 30M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:10.0.1 (10.1 seconds)<br>
-Total time including file writes: 00:00:10.101 (10.101 seconds)
+Total time to process all reports: 00:00:02.024 (2.024 seconds)<br>
+Total time including file writes: 00:00:02.024 (2.024 seconds)
 </div>
 </body>
 </html>
