--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 09/04/2021 06:00<br>
+Reserved books sorted by name - 09/05/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 814 books<br>
@@ -862,12 +862,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
 Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
-Average completed per year: 44.6 titles - 496H 40M / 20D 16H 40M<br>
+Average completed per year: 44.6 titles - 496H 31M / 20D 16H 31M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01.579 (1.579 seconds)<br>
-Total time including file writes: 00:00:01.579 (1.579 seconds)
+Total time to process all reports: 00:00:01..53 (1.53 seconds)<br>
+Total time including file writes: 00:00:01..53 (1.53 seconds)
 </div>
 </body>
 </html>
