--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/05/2021 06:00<br>
+Completed books sorted by folder - 09/06/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 54 books - 530H 9M / 22D 2H 9M<br>
 Total Comic Trades : 23<br>
 Average book length : 9H 49M<br>
-Hours read per week : 14H 57M<br>
-On pace to complete 79 books (780H 43M / 32D 12H 43M) by the end of 2021<br>
+Hours read per week : 14H 54M<br>
+On pace to complete 79 books (777H 34M / 32D 9H 34M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -488,12 +488,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
 Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
-Average completed per year: 44.6 titles - 496H 31M / 20D 16H 31M<br>
+Average completed per year: 44.6 titles - 496H 21M / 20D 16H 21M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:01..53 (1.53 seconds)<br>
-Total time including file writes: 00:00:01..53 (1.53 seconds)
+Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
+Total time including file writes: 00:00:01.537 (1.537 seconds)
 </div>
 </body>
 </html>
