--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -61,6 +61,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1625179418l/54768428._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1562087239l/44300262._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1574377004l/51065933._SX318_SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1583157769l/48722104._SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
