--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 09/07/2021 06:00<br>
+Completed books sorted by name - 09/08/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-387 books<br>
+388 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -46,6 +46,7 @@ Armada - Ernest Cline - 11H 54M (Completed in 2015)<br>
 Astrophysics for People in a Hurry - Neil DeGrasse Tyson - 3H 42M (Completed in 2017)<br>
 Attack on Titan 29 - 5H 58M (Completed in 2021)<br>
 Attack on Titan 30 - 5H 58M (Completed in 2021)<br>
+Attack on Titan 31 - 5H 58M (Completed in 2021)<br>
 Avengers Vol. 7 The Age of Khonshu - 5H 43M (Completed in 2021)<br>
 Batgirl Year One - 7H 28M (Completed in 2020)<br>
 Batman Fortnite Zero Point - 4H 43M (Completed in 2021)<br>
@@ -406,7 +407,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
+Completed in 2021 - 55 books - 536H 7M / 22D 8H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -416,7 +417,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
+Book Reserve - Manga - 3 books - 19H 54M / 0D 19H 54M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 445 books - 6057H 23M / 252D 9H 23M<br>
@@ -427,20 +428,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 211 queued items: 2744H 21M / 114D 8H 21M<br>
 0 reserve titles are marked as high priority<br>
-25.86% of reserve items are queued<br>
+25.89% of reserve items are queued<br>
  <br>
 All books included in this report: 1203 titles - 14413H 38M / 600D 13H 38M<br>
-Records not found in the lookup file: 2<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
-Total remaining in queue and reserve: 816 titles - 10105H 41M / 421D 1H 41M<br>
-Average completed per year: 44.6 titles - 496H 12M / 20D 16H 12M<br>
-Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.5<br>
+Total completed since 01/01/2013: 388 titles - 4313H 55M / 179D 17H 55M<br>
+Total remaining in queue and reserve: 815 titles - 10099H 43M / 420D 19H 43M<br>
+Average completed per year: 44.7 titles - 496H 44M / 20D 16H 44M<br>
+Remaining years of reserve material at average yearly pace: 18.2<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:01.546 (1.546 seconds)<br>
-Total time including file writes: 00:00:01.546 (1.546 seconds)
+Total time to process all reports: 00:00:01.588 (1.588 seconds)<br>
+Total time including file writes: 00:00:01.588 (1.588 seconds)
 </div>
 </body>
 </html>
